# serializer version: 1
# name: test_edit_setup_script_with_exec_imm_sql
  '''
  
  EXECUTE IMMEDIATE FROM '/__generated/moduleB/dummy.sql';
  EXECUTE IMMEDIATE FROM '/__generated/dummy.sql';
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql.1
  '''
  create application role app_public;
  EXECUTE IMMEDIATE FROM '/__generated/__generated.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_noop
  '#some text'
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink
  '''
  
  EXECUTE IMMEDIATE FROM '/__generated/moduleB/dummy.sql';
  EXECUTE IMMEDIATE FROM '/__generated/dummy.sql';
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink.1
  '''
  create application role admin;
  EXECUTE IMMEDIATE FROM '/__generated/__generated.sql';
  
  '''
# ---
# name: test_edit_setup_script_with_exec_imm_sql_symlink.2
  'create application role admin;'
# ---
# name: test_generate_create_sql_ddl_statements_w_all_entries
  '''
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip')
  PACKAGES=('package_one==1.0.2', 'package_two')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_create_sql_ddl_statements_w_select_entries
  '''
  CREATE OR REPLACE
  PROCEDURE my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  HANDLER='my_function_handler'
  EXECUTE AS OWNER;
  
  '''
# ---
# name: test_generate_grant_sql_ddl_statements
  '''
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl0]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl10]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python===0.15.0-rc1')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl11]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python===0.15.0-rc1')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl12]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python<<0.15.0', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl13]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python2', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl14]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python  ==  0.15.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl1]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl2]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('other-package', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl3]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python==0.15.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl4]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python==0.15.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl5]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python<0.16.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl6]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python<=0.17.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl7]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python>=0.14.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl8]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python>0.13.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_package_normalization[package_decl9]
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('snowflake-snowpark-python===0.15.0')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_no_collected_functions
  ''
# ---
# name: test_process_with_collected_functions
  '''
  -- stagepath/main.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  -- stagepath/data.py
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/', '/stagepath/data.py', '/stagepath/extra_import1.zip', '/stagepath/some_dir_str', '/stagepath/withslash.py', '@dummy_stage_str')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='data.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_with_collected_functions.1
  '''
  
  EXECUTE IMMEDIATE FROM '/__generated/stagepath/main.sql';
  EXECUTE IMMEDIATE FROM '/__generated/stagepath/data.sql';
  '''
# ---
# name: test_process_with_collected_functions.2
  '''
  create application role app_public;
  EXECUTE IMMEDIATE FROM '/__generated/__generated.sql';
  
  '''
# ---
# name: test_process_with_collected_functions.3
  '''
  
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/path/to/import1.py', '/path/to/import2.zip', '/stagepath/main.py')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='main.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
# name: test_process_with_collected_functions.4
  '''
  
  CREATE OR REPLACE
  PROCEDURE DATA.my_function(first int DEFAULT 42)
  RETURNS int
  LANGUAGE PYTHON
  RUNTIME_VERSION=3.11
  IMPORTS=('/', '/stagepath/data.py', '/stagepath/extra_import1.zip', '/stagepath/some_dir_str', '/stagepath/withslash.py', '@dummy_stage_str')
  PACKAGES=('package_one==1.0.2', 'package_two', 'snowflake-snowpark-python')
  EXTERNAL_ACCESS_INTEGRATIONS=('integration_one', 'integration_two')
  SECRETS=('key1'=secret_one, 'key2'=integration_two)
  HANDLER='data.my_function_handler'
  EXECUTE AS OWNER;
  
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_ADMIN;
  GRANT USAGE ON PROCEDURE DATA.my_function(int)
  TO APPLICATION ROLE APP_VIEWER;
  '''
# ---
